k8s/service-instance1.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-novnc-instance1
spec:
  ports:
  - port: 6080
    targetPort: 6080
    protocol: TCP
  selector:
    app: ubuntu-novnc-instance1
